[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["dmitrijgulacenkov <pingvin1959@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
uvloop = "^0.14.0"
aioredis = "^1.3.1"
schematics = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"